# variants-data-struct

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: lib.rs
variants-data-struct/: Cargo.toml  LICENSE-APACHE  README.md
variants-data-struct/src/: lib.rs  variants_data_struct_attr_meta.rs  variants_data_struct_defs.rs  variants_data_struct_field_attr_meta.rs  variants_data_struct_field_meta.rs  variants_data_struct_meta.rs
